--- a/test.html
+++ b/test.html
@@ -32,12 +32,12 @@
 </script>
 <br>
 <br>
-<label for="down" >Downloading：</label>
-<progress id="down" value="10" max="100"></progress>
+<label for="download" >Downloading：</label>
+<progress id="download" value="10" max="100"></progress>
 <button id="loading">click</button>
 <script>
     function clickbt(){
-    let progressing=document.getElementById("down");
+    let progressing=document.getElementById("download");
         function frame(){
             let i=1;
             progressing.value+=i;
